widget/gtk/nsLookAndFeel.cpp
@@ -19,6 +19,7 @@
 #include <fontconfig/fontconfig.h>
 #include "gfxPlatformGtk.h"
 #include "mozilla/FontPropertyTypes.h"
+#include "mozilla/RelativeLuminanceUtils.h"
 #include "ScreenHelperGTK.h"
 
 #include "gtkdrawing.h"
@@ -719,7 +720,10 @@ nsresult nsLookAndFeel::GetIntImpl(IntID aID, int32_t& aResult) {
       nscolor fg, bg;
       if (NS_SUCCEEDED(NativeGetColor(eColorID_windowtext, fg)) &&
           NS_SUCCEEDED(NativeGetColor(eColorID_window, bg))) {
-        aResult = NS_GetLuminosity(bg) < NS_GetLuminosity(fg) ? 1 : 0;
+        aResult = (RelativeLuminanceUtils::Compute(bg) <
+                   RelativeLuminanceUtils::Compute(fg))
+                      ? 1
+                      : 0;
         break;
       }
       MOZ_FALLTHROUGH;
